Adaugare query parameters pentru Ticket